# cmakeboost

./: CMakeLists.txt  HelloWorld.cpp
